--- a/_posts/2022-04-04-Vader.markdown
+++ b/_posts/2022-04-04-Vader.markdown
@@ -195,4 +195,7 @@ Thanks [FITSEC Team](https://floridatech.campuslabs.com/engage/organization/fits
 
 For fun and knowledge, always think out of the box! :)
 
+<figure>
+        <img src="/assets/img/score.png" alt="" />
+</figure>
 
