--- a/_posts/2022-05-01-OTP-Vault.markdown
+++ b/_posts/2022-05-01-OTP-Vault.markdown
@@ -2,9 +2,9 @@
 layout: post
 title:  "OTP Vault (Mobile Challenge Writeup) -- Nahamcon CTF 2022"
 date:   2022-05-01
-image: nahamcon.png
+image:  /nahamcon22/nahamcon.png
 ---
-<p class="intro"><span class="dropcap">N</span>ahamCom 2022 is a free virtual security conference Hosted by <a href="https://twitter.com/STOKFredrik">STOK</a>, <a href="https://twitter.com/_johnhammond">John Hammond</a> and <a href="https://twitter.com/NahamSec">NahamSec</a></p>
+<p class="intro"><span class="dropcap">N</span>ahamCom 2022 is a free virtual security conference Hosted by <a href="https://twitter.com/STOKFredrik">STOK</a>, <a href="https://twitter.com/_johnhammond">John Hammond</a> and <a href="https://twitter.com/NahamSec">NahamSec</a>. Really good CTF, nice challenge and good infra!.</p>  
 
 
 Challenges Description:
@@ -87,7 +87,7 @@ We then proceed to build a request with curl.
 
 ```bash
 ┌──(leonuz㉿sniper)-[~/CTFs/NahamCon2022/Mobile/OTPVault]
-└─$ curl -H "Content-Type: application/json" -H "Authorization: Bearer KMGQ0YTYgIMTk5Mjc2NzZY4OMjJlNzAC0WU2DgiYzE41ZDwN" -X GET http://congon4tor.com:7777/flag
+└─$ curl "Authorization: Bearer KMGQ0YTYgIMTk5Mjc2NzZY4OMjJlNzAC0WU2DgiYzE41ZDwN" -X GET http://congon4tor.com:7777/flag
 {"flag":"flag{5450384e093a0444e6d3d39795dd7ddd}"}
 ```
 And we get the flag!
