--- a/_posts/2022-05-01-OTP-Vault.markdown
+++ b/_posts/2022-05-01-OTP-Vault.markdown
@@ -4,7 +4,7 @@ title:  "OTP Vault (Mobile Challenge Writeup) -- Nahamcon CTF 2022"
 date:   2022-05-01
 image:  /nahamcon22/nahamcon.png
 ---
-<p class="intro"><span class="dropcap">N</span>ahamCom 2022 is a free virtual security conference Hosted by <a href="https://twitter.com/STOKFredrik">STOK</a>, <a href="https://twitter.com/_johnhammond">John Hammond</a> and <a href="https://twitter.com/NahamSec">NahamSec</a>. Really good CTF, nice challenge and good infra!.</p>  
+<p class="intro"><span class="dropcap">N</span>ahamCom 2022 was a free virtual security conference Hosted by <a href="https://twitter.com/STOKFredrik">STOK</a>, <a href="https://twitter.com/_johnhammond">John Hammond</a> and <a href="https://twitter.com/NahamSec">NahamSec</a>. Very good experience with all possible challenge categories, nice challenge and very good infrastructure and support through the discord channel.</p>  
 
 
 Challenges Description:
