--- a/_posts/2022-05-01-OTP-Vault.markdown
+++ b/_posts/2022-05-01-OTP-Vault.markdown
@@ -88,7 +88,7 @@ We then proceed to build a request with curl.
 
 ```bash
 ┌──(leonuz㉿sniper)-[~/CTFs/NahamCon2022/Mobile/OTPVault]
-└─$ curl "Authorization: Bearer KMGQ0YTYgIMTk5Mjc2NzZY4OMjJlNzAC0WU2DgiYzE41ZDwN" -X GET http://congon4tor.com:7777/flag
+└─$ curl -H "Authorization: Bearer KMGQ0YTYgIMTk5Mjc2NzZY4OMjJlNzAC0WU2DgiYzE41ZDwN" -X GET http://congon4tor.com:7777/flag
 {"flag":"flag{5450384e093a0444e6d3d39795dd7ddd}"}
 ```
 And we get the flag!
