--- a/_posts/2022-05-01-OTP-Vault.markdown
+++ b/_posts/2022-05-01-OTP-Vault.markdown
@@ -19,7 +19,7 @@ We were given a file to download ([source here](https://github.com/leonuz/CTFs/r
 
 We use [apktool](https://ibotpeaches.github.io/Apktool/) to reverse engineering the APK file.
 
-```bash
+{%- highlight bash -%}
 ┌──(leonuz㉿sniper)-[~/CTFs/NahamCon2022/Mobile]
 └─$ apktool d -f OTPVault.apk
 I: Using Apktool 2.5.0-dirty on OTPVault.apk
@@ -41,19 +41,19 @@ I: Copying original files...
 └─$ ls
 AndroidManifest.xml  apktool.yml  assets  kotlin  lib  original  res  smali  unknown
 
- ```
+{%- endhighlight -%}
 
 We do a complete search for keyword "flag" inside the new directory, and we get inside the `assets` directory this particular file `index.android.bundle`.  
 It took us a while to go through this code, but near the end of the file we got this function. 
 
-```javascript
+{%- highlight javascript -%}
 REDACTED.....
 function O(){var n;(0,e.default)(this,O);for(var o=arguments.length,u=new Array(o),l=0;l<o;l++)u[l]=arguments[l];return(n=b.call.apply(b,[this].concat(u))).state={output:'Insert your OTP to unlock your vault',text:''},n.s='JJ2XG5CIMFRWW2LOM4',n.url='http://congon4tor.com:7777',n.token='652W8NxdsHFTorqLXgo=',n.getFlag=function(){var e,o;return t.default.async(function(u){for(;;)switch(u.prev=u.next){case 0:return u.prev=0,e={headers:{Authorization:'Bearer KMGQ0YTYgIMTk5Mjc2NzZY4OMjJlNzAC0WU2DgiYzE41ZDwN'}},u.next=4,t.default.awrap(p.default.get(n.url+"/flag",e));case 4:o=u.sent,n.setState({output:o.data.flag}),u.next=12;break;case 8:u.prev=8,u.t0=u.catch(0),console.log(u.t0),n.setState({output:'An error occurred getting the flag'});
 REDACTED.....                                                                                                                                      
-```
+{%- endhighlight -%}
 we use this [JavaScript Beutifier](https://javascriptbeautifier.org/) to read that part of the code
 
-```javascript
+{%- highlight javascript -%}
 function O() {
     var n;
     (0, e.default)(this, O);
@@ -81,19 +81,19 @@ function O() {
                                         output: 'An error occurred getting the flag'
                                     });
 
-```
+{%- endhighlight -%}
 
 Everything looks like the flag is obtained from the web server that uses the basic bearer authorization.  
 We then proceed to build a request with curl.  
 
-```bash
+{%- highlight bash -%}
 ┌──(leonuz㉿sniper)-[~/CTFs/NahamCon2022/Mobile/OTPVault]
 └─$ curl -H "Authorization: Bearer KMGQ0YTYgIMTk5Mjc2NzZY4OMjJlNzAC0WU2DgiYzE41ZDwN" -X GET http://congon4tor.com:7777/flag
 {"flag":"flag{5450384e093a0444e6d3d39795dd7ddd}"}
 ```
 And we get the flag!
 
-- - -
+{%- endhighlight -%}
 
 Thanks [NahamCon](https://www.nahamcon.com/) for the excellent CTF.
 
