--- a/_posts/2022-10-09-Postal.markdown
+++ b/_posts/2022-10-09-Postal.markdown
@@ -171,7 +171,7 @@ We have the flag!!
 CyberErudites{4U57r4114_P057_4_57473}
 {%- endhighlight -%}
 
-### CyberErudites{4U57r4114_P057_4_57473}
+## CyberErudites{4U57r4114_P057_4_57473}
 
 
 - - -
